Fixing word wrapping

--- a/packages/react-frontend/components/Review.css
+++ b/packages/react-frontend/components/Review.css
@@ -30,7 +30,7 @@
 
 .reviewContent h3 {
   word-wrap: break-word;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .modifyIcons > *:hover {
