--- a/packages/react-frontend/src/routes/AlbumInfo.css
+++ b/packages/react-frontend/src/routes/AlbumInfo.css
@@ -61,7 +61,7 @@ img {
 .song-list li {
   margin: 5px 0;
   word-wrap: break-word; /* wraps the song name, if too long */
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .popularity,
@@ -105,7 +105,7 @@ a {
   margin-bottom: 10px;
   margin: 5px 0;
   word-wrap: break-word; /* wraps the review name, if too long */
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .review {
